Add tests to JsonWriterCotnractTests